--- a/PortfolioPF/Content/agency.css
+++ b/PortfolioPF/Content/agency.css
@@ -173,7 +173,7 @@ img::-moz-selection {
 header.masthead {
     text-align: center;
     color: white;
-    background-image: url('../Assets/keyboard.jpeg');
+    background-image: url('../Assets/jeremy-bishop-QHZn3-0bbEM-unsplash.jpg');
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
